--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,13 +1,78 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+html {
+  scroll-behavior: smooth;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  margin: 0 auto;
+  /* font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif; */
+  font-family: "Open Sans", sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  overflow-x: hidden;
+}
+
+a {
+  transition: 0.2s;
+  -moz-transition: 0.2s;
+  -webkit-transition: 0.2s;
+  -o-transition: 0.2s;
+}
+
+/* transition */
+.transition {
+  transition: 0.2s;
+  -moz-transition: 0.2s;
+  -webkit-transition: 0.2s;
+  -o-transition: 0.2s;
+}
+
+/* navbar */
+.navbar {
+  position: fixed;
+  box-sizing: border-box;
+  top: 0;
+  width: 100%;
+  background-color: #333046;
+  padding: 25px;
+  padding-left: 10px;
+  padding-right: 20px;
+  overflow-x: hidden;
+  z-index: 100;
+}
+.navItems {
+  float: right;
+}
+.navbar a {
+  color: white;
+  font-size: 25px;
+  padding: 20px;
+  text-decoration: none;
+}
+/* pages */
+.block {
+  height: 100vh;
+}
+.overlay {
+  background-color: rgba(51, 48, 70, 0.83);
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  padding-left: 10vw;
+}
+.overlay h1,
+.overlay h2 {
+  color: white;
+  font-weight: normal;
+}
+.overlay h1 {
+  font-size: 100px;
+  margin: 0;
+  padding-bottom: 10px;
+}
+.overlay h2 {
+  font-size: 48px;
+  margin: 0;
 }
